--- a/src/component/c_news_single/c_news_single.scss
+++ b/src/component/c_news_single/c_news_single.scss
@@ -1,5 +1,4 @@
 .container {
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
@@ -9,7 +8,6 @@
   /* 页面总宽度750px,左右还有33px的margin，所以组件宽度未684px; */
 
   .news_single {
-    display: flex;
     width: 684px;
     height: 199px;
     flex-direction: column;
@@ -18,6 +16,7 @@
     border-bottom-width: 0.5px;
     padding-top: 24.5px;
     padding-bottom: 24px;
+    border: 1px solid #CDCDCD;
   }
 
   .news_single_content {
@@ -25,11 +24,11 @@
   }
 
   .news_single_title {
-    display: flex;
     width: 434px;
     flex-direction: column;
     margin-right: 33.3px;
     justify-content: space-between;
+    float: left;
   }
 
   .head {
@@ -38,15 +37,14 @@
 
   .foot {
     width: 434px;
+    padding-top: 30px;
     /* margin-top: 16.7px; */
   }
 
   .news_single_img {
-    display: flex;
     width: 222px;
     height: 148px;
-    align-items: center;
-    justify-content: center;
+    float: right;
   }
 
   .foot_font {
