--- a/src/pages/Page_Search/Page_Search.scss
+++ b/src/pages/Page_Search/Page_Search.scss
@@ -57,6 +57,7 @@
     height: 73px;
     border-bottom-width: 0.5px;
     border-bottom-color: #BCBCBC;
+    border-bottom-style: solid;
     flex-direction: column;
   }
 
