--- a/src/pages/Page_Video/Page_Video.scss
+++ b/src/pages/Page_Video/Page_Video.scss
@@ -64,16 +64,19 @@
     flex-direction: column;
     align-items: flex-start;
     width: 684px;
-    height: 400px;
+    height: 428px;
   }
 
   .img_container {
+    display: flex;
+    flex-direction: row;
     width: 684px;
     height: 199px;
     padding-top: 27.3px;
     padding-bottom: 26.6px;
     border-bottom-color: #BABABA;
     border-bottom-width: 0.5px;
+    border-bottom-style: solid;
   }
 
   .text {
@@ -82,6 +85,7 @@
     margin-right: 33.3px;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: space-between;
   }
 
   .head {
@@ -97,12 +101,14 @@
 
   .image {
     width: 222px;
-    height: 148px;
+    height: 168px;
   }
 
   .timebg {
     width: 69px;
     height: 34px;
+    line-height: 34px;
+    text-align: center;
     border-radius: 4px;
     background-color: #000000;
     opacity: 0.3
@@ -114,7 +120,7 @@
     justify-content: flex-end;
     align-items: flex-end;
     width: 222px;
-    height: 148px;
+    height: 168px;
   }
 
   .time {
